--- a/diamond.html
+++ b/diamond.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DiamonTV</title>
+    <title>DiamondTV</title>
 
     <!-- Favicon -->
     <link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhXM7JlMAlGkjos6ppaQruFka-0zCCMZsiNV9dM-uRNuIN-CepL46U6NO22pg74MWT4e6Kmg830dpwWELdSuN_cV3w0vQ4yGAKSo5emaxwa_nhCyhyphenhyphenawK9jsbHv5TT5HBZGR32AO9HEpB4A0RHvRI3HhvC8GvqbB3D86doZ1X7TtQ56hRYTa8eFE5HLIX-C/s500/logodiamondtv.ico" type="image/x-icon">
