--- a/diamond.html
+++ b/diamond.html
@@ -207,7 +207,7 @@
         </ul>
         <p></p>
         <p>Bawa hiburan ke tingkat berikutnya dengan Aplikasi TV Online kami. Unduh sekarang dan jelajahi dunia konten yang luas di ujung jari Anda!</p>
-        <a href="https://www.mediafire.com/file/vv1hvo4o9z35wq1/diamond.tv.apk/file" class="cta-button">Download</a>
+        <a href="https://www.mediafire.com/file/qsdkg7wq6f3r9ca/DiamondTV.apk/file" class="cta-button">Download</a>
     </section>
 
     <footer>
